  * Improve 023_add-x2goagent-wrapper.full.patch: Properly set NX_TEMP, make
    sure x2goagent launches even with pam_tmpdir.so being in use.
  * Add VERSION.x2goagent to package x2goagent package so x2goversion command
    lists up x2goagent in the list of X2Go server-side packages.
  * Refresh patch: 200_nxagent_check-binary-x2go-flavour.full.patch.

 -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Thu, 28 Jun 2012 14:54:51 +0200

nx-libs (2:3.5.0.14-0) unstable; urgency=low

  [ Mike Gabriel ]
  * New upstream release of nxagent (3.5.0-9).
  * Adapt patch series (all hunks succeeded automatically).
  * Drop patch: 120_nxagent_libcairo-null-source-drawables.full.patch, the issue
    has been fixed by NoMachine (TR05J02703).
  * Drop patch: 109_nxagent_locale-utf8-compound-text.patch, the patch causes
    Qt applications to be rendered without window decorations when running in
    rootless window mode.

  [ Mihai Moldovan ]
  * Add patch: 052_nxcomp_macos10-nxauth-location.full+lite.patch, change
    nxauth search location on Mac OS X to $NX_SYSTEM/nxauth to facilitate
    application bundle building.

 -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Thu, 28 Jun 2012 14:52:24 +0200

nx-libs (2:3.5.0.13-0) unstable; urgency=low

  [ Mike Gabriel ]
  * Let nxagent Debian package depend on xfonts-base.

  [ Jim Burnes ]
  * Add patch: 120_nxagent_libcairo-null-source-drawables.full.patch, solves
    crashes of GTK applications based on libcairo 1.12.1+.

 -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Fri, 11 May 2012 23:51:35 +0200

nx-libs (2:3.5.0.12-0) unstable; urgency=low

  [ Mike Gabriel ]
  * Update patch: 001_add-main-makefile.full+lite.patch, adapt patch from
    packaging. Test for Makefiles in subfolders before calling them.
    Fixes build failure during ,,make distclean'' calls.
  * Provide temporary workaround for installation on Debian 64bit with
    multiarch support (via libnx-x11.postinst and .prerm).